# rss-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/commands/: help.rs
