[package]
name = "news-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
poise = "0.5.5"
reqwest = "0.11.19"
rss = "2.0.6"
tokio = { version = "1.32.0", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
