[package]
name = "rss-bot"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
poise = "0.6.1"
reqwest = "0.12.5"
rss = "2.0.8"
tokio = { version = "1.35.1", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
